Projeto final resposivo

--- a/promo.html
+++ b/promo.html
@@ -11,13 +11,13 @@
 </head>
 <body>
     <div class="container-promo">
+        <!-- AVISAR JULIANO -->
         <input id="main-menu-checkbox" type="checkbox">
         <header class="menu">
             <img src="./resources/css/img/logo.png" alt="Css Burguer">
             <div class="iconemenu">
                 <ion-icon name="menu-outline"></ion-icon>
             </div>
-
             <nav class="nav-menu">
                 <li class="item-nav ">
                     <a href="./home.html">
@@ -56,7 +56,7 @@
                 </li>
             </nav>
         </header>
-        <!-- <div class="topo"></div> -->
+        <div class="topo"></div>
         <h1 class="title-promo">Promoções</h1>
         <div class="promo">
             <section class="slider-exemplo">   
@@ -117,27 +117,25 @@
                 </p> 
             </section>
         </div>
-       
-
         <footer>
             <div>
                 <div class="col span-1-of-2">
                     <ul class="footer-nav">
-                        <li><a href="./landingPage.html">Nosso Hamburguer é o melhor.</a></li>
+                        <li><a href="#">Nosso Hamburguer é o melhor.</a></li>
                     </ul>
                 </div>
                 <div>
                     <ul class="social-links">
-                        <li><a href="#"><ion-icon class="logo-instagram" name="logo-instagram"></ion-icon></a></li>
-                        <li><a href="#"><ion-icon class="logo-facebook" name="logo-facebook"></ion-icon></a></li>
-                        <li><a href="#"><ion-icon class="logo-twitter" name="logo-twitter"></ion-icon></a></li>
+                        <li><a href="https://www.instagram.com/"><ion-icon class="logo-instagram" name="logo-instagram"></ion-icon></a></li>
+                        <li><a href="https://www.facebook.com/"><ion-icon class="logo-facebook" name="logo-facebook"></ion-icon></a></li>
+                        <li><a href="https://www.twitter.com/"><ion-icon class="logo-twitter" name="logo-twitter"></ion-icon></a></li>
                     </ul>
                 </div>
             </div>
             <div class="footer-paragrafo">
                 <p>Copyright &copy; 2019 CSS BUrguer Todos os direitos reservados.</p>
-           </div>
-          </ul>
+            </div>
+            </ul>
         </footer>
     </div>
     <!-- importação da biblioteca JQUERY-->
