--- a/cardapio.html
+++ b/cardapio.html
@@ -12,6 +12,7 @@
 </head>
 <body>
     <div class="container">
+        <!-- AVISAR JULIANO -->
         <input id="main-menu-checkbox" type="checkbox">
         <header class="menu">
             <img src="./resources/css/img/logo.png" alt="Css Burguer">
@@ -57,9 +58,9 @@
                 </li>
             </nav>
         </header>
-        <div class="topo"></div>
+    <div class="topo"></div>
+    <h1 class="title">Cardápio</h1>
         <div class="cardapio">
-            <h1 class="title">Cardápio</h1>
             <article>
                 <div class="slider">
                     <img class="selected" src="./resources/img/cardapio/1.png" alt="cardapio">
