--- a/delivery.html
+++ b/delivery.html
@@ -9,96 +9,95 @@
     
 </head>
 <body>
-    <div class="container">
-        <input id="main-menu-checkbox" type="checkbox">
-        <header class="menu">
-            <img src="./resources/css/img/logo.png" alt="Css Burguer">
-            <div class="iconemenu">
-                <ion-icon name="menu-outline"></ion-icon>
+    <input id="main-menu-checkbox" type="checkbox">
+        <!-- AVISAR JULIANO -->
+    <input id="main-menu-checkbox" type="checkbox">
+    <header class="menu">
+        <img src="./resources/css/img/logo.png" alt="Css Burguer">
+        <div class="iconemenu">
+            <ion-icon name="menu-outline"></ion-icon>
+        </div>
+        <nav class="nav-menu">
+            <li class="item-nav ">
+                <a href="./home.html">
+                    Home
+                </a>
+            </li>
+            <li class="item-nav">
+                <a href="./cardapio.html">
+                    Cardápio
+                </a>
+            </li>
+            <li class="item-nav">
+                <a href="./galeria.html">
+                    Galeria
+                </a>
+            </li>
+            <li class="item-nav">
+                <a href="./promo.html">
+                    Promoções
+                </a>
+            </li>
+            <li class="item-nav">
+                <a href="./delivery.html">
+                    Delivery
+                </a>
+            </li>
+            <li class="item-nav">
+                <a href="./reservas.html">
+                    Reservas
+                </a>
+            </li>
+            <li class="item-nav">
+                <a href="./franqueado.html">
+                    Seja um franqueado
+                </a>
+            </li>
+        </nav>
+    </header>
+    <div class="topo"></div>
+    <h1>Baixe agora o APP!</h1>
+    <section class="section-steps">
+        <div class="row">
+            <div class="col span-1-of-2 steps-box">
+                <img src="resources/img/delivery/cell.jpg" alt="Seu pedido pelo iPhone" class="app-screen">
             </div>
-
-            <nav class="nav-menu">
-                <li class="item-nav ">
-                    <a href="./home.html">
-                        Home
-                    </a>
-                </li>
-                <li class="item-nav">
-                    <a href="./cardapio.html">
-                        Cardápio
-                    </a>
-                </li>
-                <li class="item-nav">
-                    <a href="./galeria.html">
-                        Galeria
-                    </a>
-                </li>
-                <li class="item-nav">
-                    <a href="./promo.html">
-                        Promoções
-                    </a>
-                </li>
-                <li class="item-nav">
-                    <a href="./delivery.html">
-                        Delivery
-                    </a>
-                </li>
-                <li class="item-nav">
-                    <a href="./reservas.html">
-                        Reservas
-                    </a>
-                </li>
-                <li class="item-nav">
-                    <a href="./franqueado.html">
-                        Seja um franqueado
-                    </a>
-                </li>
-            </nav>
-        </header>
-        <div class="topo"></div>
-        <section class="section-steps">
-            <h1>Baixe agora o APP!</h1>
-            <div class="row">
-                <div class="col span-1-of-2 steps-box">
-                    <img src="resources/img/delivery/cell.jpg" alt="Seu pedido pelo iPhone" class="app-screen">
+            <div class="col span-1-of-2 steps-box">
+                <div class="step">
+                    <div>1</div>
+                    <p>Selecione o pedido do seu gosto e que caiba no seu bolso!</p>
                 </div>
-                <div class="col span-1-of-2 steps-box">
-                    <div class="step">
-                        <div>1</div>
-                        <p>Selecione o pedido do seu gosto e que caiba no seu bolso!</p>
-                    </div>
-                    <div class="step">
-                        <div>2</div>
-                        <p>Escolha os melhores hamburgueres da cidade!</p>
-                    </div>
-                    <div class="step">
-                        <div>3</div>
-                        <p>Faça seu pedido e receba a sua refeição  na porta de casa!</p>
-                    </div>
+                <div class="step">
+                    <div>2</div>
+                    <p>Escolha os melhores hamburgueres da cidade!</p>
+                </div>
+                <div class="step">
+                    <div>3</div>
+                    <p>Faça seu pedido e receba a sua refeição  na porta de casa!</p>
                 </div>
             </div>
-        </section>
-        <footer class="promo-footer">
+        </div>
+    </section>
+    <footer>
+        <div>
+            <div class="col span-1-of-2">
+                <ul class="footer-nav">
+                    <li><a href="#">Nosso Hamburguer é o melhor.</a></li>
+                </ul>
+            </div>
             <div>
-                <div class="col span-1-of-2">
-                    <ul class="footer-nav">
-                        <li><a href="./home.html">Nosso Hamburguer é o melhor.</a></li>
-                    </ul>
-                </div>
-                <div>
-                    <ul class="social-links">
-                        <li><a href="#"><ion-icon class="logo-instagram" name="logo-instagram"></ion-icon></a></li>
-                        <li><a href="#"><ion-icon class="logo-facebook" name="logo-facebook"></ion-icon></a></li>
-                        <li><a href="#"><ion-icon class="logo-twitter" name="logo-twitter"></ion-icon></a></li>
-                    </ul>
-                </div>
+                <ul class="social-links">
+                    <li><a href="https://www.instagram.com/"><ion-icon class="logo-instagram" name="logo-instagram"></ion-icon></a></li>
+                    <li><a href="https://www.facebook.com/"><ion-icon class="logo-facebook" name="logo-facebook"></ion-icon></a></li>
+                    <li><a href="https://www.twitter.com/"><ion-icon class="logo-twitter" name="logo-twitter"></ion-icon></a></li>
+                </ul>
             </div>
-            <div class="footer-paragrafo">
-                <p>Copyright &copy; 2019 CSS BUrguer Todos os direitos reservados.</p>
-            </div>
-            </ul>
-        </footer>
-    </div>
+        </div>
+        <div class="footer-paragrafo">
+            <p>Copyright &copy; 2019 CSS BUrguer Todos os direitos reservados.</p>
+        </div>
+        </ul>
+    </footer>
     <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
 </body>
 </html>
