--- a/galeria.html
+++ b/galeria.html
@@ -9,13 +9,13 @@
     
 </head>
 <body>
+    <!-- AVISAR JULIANO -->
     <input id="main-menu-checkbox" type="checkbox">
     <header class="menu">
         <img src="./resources/css/img/logo.png" alt="Css Burguer">
         <div class="iconemenu">
             <ion-icon name="menu-outline"></ion-icon>
         </div>
-
         <nav class="nav-menu">
             <li class="item-nav ">
                 <a href="./home.html">
@@ -173,18 +173,18 @@
             </ul>
         </section> 
     </div>
-    <footer class="promo-footer">
+    <footer>
         <div>
             <div class="col span-1-of-2">
                 <ul class="footer-nav">
-                    <li><a href="./home.html">Nosso Hamburguer é o melhor.</a></li>
+                    <li><a href="#">Nosso Hamburguer é o melhor.</a></li>
                 </ul>
             </div>
             <div>
                 <ul class="social-links">
-                    <li><a href="#"><ion-icon class="logo-instagram" name="logo-instagram"></ion-icon></a></li>
-                    <li><a href="#"><ion-icon class="logo-facebook" name="logo-facebook"></ion-icon></a></li>
-                    <li><a href="#"><ion-icon class="logo-twitter" name="logo-twitter"></ion-icon></a></li>
+                    <li><a href="https://www.instagram.com/"><ion-icon class="logo-instagram" name="logo-instagram"></ion-icon></a></li>
+                    <li><a href="https://www.facebook.com/"><ion-icon class="logo-facebook" name="logo-facebook"></ion-icon></a></li>
+                    <li><a href="https://www.twitter.com/"><ion-icon class="logo-twitter" name="logo-twitter"></ion-icon></a></li>
                 </ul>
             </div>
         </div>
